--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,14 @@
 
 {% block content %}
 
-<h1>Hello</h1>
+<h1>
+    Hello
+</h1>
+
+{% for each in users %}
+<li>{{each.username}}</li>
+{% endfor %}
+
+<a href="">Link to chat</a>
 
 {% endblock %}
