last push before first test deployment

--- a/templates/base.html
+++ b/templates/base.html
@@ -84,7 +84,7 @@
         {% endif %}
       
         <!-- Main Content -->
-        <div class="flex-1 p-8 ml-64">
+        <div class="flex-1 ml-64">
             {% block content %}
 
             {% endblock %}
