--- a/templates/chat/partials/chat_message_p.html
+++ b/templates/chat/partials/chat_message_p.html
@@ -12,4 +12,10 @@
     }
 </style>
 
-<script>scrollToBottom();</script>
+<script>
+    function toggleDropdown(id) {
+        const dropdown = document.getElementById(id);
+        dropdown.classList.toggle('hidden');
+    }
+
+</script>
