--- a/templates/cliente/profile.html
+++ b/templates/cliente/profile.html
@@ -35,7 +35,7 @@
               {% else %}
                 bg-blue-500 text-white hover:bg-blue-600
               {% endif %}">
-              {% if follow %}Unfollow{% else %}Follow{% endif %}
+              {% if follows %}Unfollow{% else %}Follow{% endif %}
             </button>
           </form>
         </div>
